[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rrt_rl_2D"
version = "0.1"
description = "2D RRT with Reinforcement Learning"
authors = [
    { name="Michal Mrkos", email="mrkosmic@fel.cvut.cz" }
]
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "numpy",
    "stable-baselines3",
    "pymunk",
    "pygame",
    "tensorboard",
    "optuna"
]

[project.urls]
Homepage = "https://github.com/majklost/RRT-RL-2D"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"rrt_rl_2D" = ["Arial.ttf"]
